# SocketClient

src/: CMakeLists.txt
src/SocketClient/: CMakeLists.txt  Source.cpp
src/SocketClientGoogleTest/: CMakeLists.txt  test.cpp
src/SocketClientLib/: CMakeLists.txt  Sock_Exc.h  SocketClient.cpp  SocketClient.h
